--- a/todolist.html
+++ b/todolist.html
@@ -11,23 +11,17 @@
         <div class="header-content">
             <iframe src="https://open.spotify.com/embed/playlist/6zCID88oNjNv9zx6puDHKj?utm_source=generator" 
                     width="350" height="100" frameborder="0" allow="encrypted-media"></iframe>
-            <h2 class="header-title">Aqui estão suas tarefas!</h2>
-            <button id="logout" title="Até breve!">DESLOGAR</button>
+            <h2 class="header-title">Here are your tasks!</h2>
+            <button id="logout" title="See you soon!">Sing Out</button>
         </div>
     </header>
 
-    <div class="login-container">
-        <h2>Login</h2>
-        <input type="email" id="email" placeholder="Digite seu e-mail" required>
-        <button id="login-btn">Entrar</button>
-    </div>
-
-    <div class="board">
+       <div class="board">
         <div class="list" id="to-do">
             <h2>To Do</h2>
             <div class="task-container">
                 <input type="text" id="task-input" placeholder="Tarefa" />
-                <button id="add-task-btn">Adicionar Tarefa</button>
+                <button id="add-task-btn">Add tasks</button>
                 <ul id="task-list"></ul>
             </div>
         </div>
@@ -49,11 +43,11 @@
     <footer>
         <div class="footer-content">
             <div class="developers-info">
-                <p class="dev-names">Desenvolvedores: Nome 1, Nome 2</p>
-                <p class="university-name">Faculdade XYZ</p>
+                <p class="dev-names">Developers: Nome 1, Nome 2</p>
+                <p class="university-name">College XYZ</p>
             </div>
             <div class="comments-section">
-                <h4>Comentários dos Usuários</h4>
+                <h4>User comments</h4>
                 <ul class="comments">
                     <li>Ótimo aplicativo! ⭐⭐⭐⭐⭐</li>
                     <li>Me ajudou muito! ⭐⭐⭐⭐</li>
