mudança no idioma e estilos no CSS

--- a/todolist.html
+++ b/todolist.html
@@ -12,7 +12,7 @@
             <iframe src="https://open.spotify.com/embed/playlist/6zCID88oNjNv9zx6puDHKj?utm_source=generator" 
                     width="350" height="100" frameborder="0" allow="encrypted-media"></iframe>
             <h2 class="header-title">Here are your tasks!</h2>
-            <button id="logout" title="See you soon!">Sing Out</button>
+            <button id="logout">Sign Out</button>
         </div>
     </header>
 
@@ -20,7 +20,7 @@
         <div class="list" id="to-do">
             <h2>To Do</h2>
             <div class="task-container">
-                <input type="text" id="task-input" placeholder="Tarefa" />
+                <input type="text" id="task-input" placeholder="Tasks" />
                 <button id="add-task-btn">Add tasks</button>
                 <ul id="task-list"></ul>
             </div>
@@ -43,21 +43,25 @@
     <footer>
         <div class="footer-content">
             <div class="developers-info">
-                <p class="dev-names">Developers: Nome 1, Nome 2</p>
-                <p class="university-name">College XYZ</p>
+                <p class="dev-names"><strong>Developers:</strong> <br>
+                André Prates da Silva <br>
+                Isabelle A. F. Carvalho <br>
+                Marcelo Augusto de Miranda</p>
+                <strong>Tutor: Emeson Borges</strong>
+                <p><strong>Centro Universitário Leonardo da Vinci - Uniasselvi</strong></p>
             </div>
             <div class="comments-section">
                 <h4>User comments</h4>
                 <ul class="comments">
-                    <li>Ótimo aplicativo! ⭐⭐⭐⭐⭐</li>
+                    <li>Precisa de mais funcionalidade. ⭐⭐⭐</li>
                     <li>Me ajudou muito! ⭐⭐⭐⭐</li>
-                    <li>Precisa de mais funcionalidades. ⭐⭐⭐</li>
-                    <li>Interface muito bonita! ⭐⭐⭐⭐⭐</li>
-                    <li>Facilidade de uso. ⭐⭐⭐⭐</li>
-                    
+                    <li>Simples e fácil de usar. ⭐⭐⭐⭐</li>
+                    <li>Ótimo aplicativo! ⭐⭐⭐⭐⭐</li>            
+                    <li>A playlist o torna diferente! ⭐⭐⭐⭐⭐</li>                    
                 </ul>
             </div>
         </div>
     </footer>
+    
 </body>
 </html>
