--- a/index.html
+++ b/index.html
@@ -5,22 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - To-Do List</title>
     <link rel="stylesheet" href="styles.css">
-    
 </head>
 <body>
     <div class="login-container">
         <h2>Login</h2>
         <form id="loginForm">
-            <label for="email">E-mail:</label>
+            <label for="email">E-mail Address:</label>
             <input type="email" id="email" required>
 
-            <label for="password">Senha:</label>
+            <label for="password">Password:</label>
             <input type="password" id="password" required>
 
-            <button type="submit">Entrar</button>
+            <button type="submit">Submit</button>
             <p id="errorMessage" class="error-message"></p>
         </form>
-        <p>Não tem uma conta? <a href="register.html">Cadastre-se aqui!</a></p>
+        <p>Do you have an account? <a href="register.html">Login here!</a></p>
     </div>
 
     <script src="login.js"></script>
