--- a/register.html
+++ b/register.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro - To-Do List</title>
+    <title>Register - To-Do List</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="login-container">
-        <h2>Cadastro</h2>
+        <h2>Register now</h2>
         <form id="registerForm">
-            <label for="newEmail">E-mail:</label>
+            <label for="newEmail">E-mail Adress:</label>
             <input type="email" id="newEmail" required>
 
-            <label for="newPassword">Senha:</label>
+            <label for="newPassword">Password:</label>
             <input type="password" id="newPassword" required>
 
-            <button type="submit">Cadastrar</button>
+            <button type="submit">Submit</button>
             <p id="registerMessage" class="error-message"></p>
         </form>
-        <p>Já tem uma conta? <a href="index.html">Faça login aqui!</a></p>
+        <p>Do you have an account? <a href="index.html">Login here!</a></p>
     </div>
 
     <script src="register.js"></script>
