alteração no CSS

--- a/todolist.html
+++ b/todolist.html
@@ -49,6 +49,7 @@
                 Marcelo Augusto de Miranda</p>
                 <strong>Tutor: Emeson Borges</strong>
                 <p><strong>Centro Universitário Leonardo da Vinci - Uniasselvi</strong></p>
+                Análise e Desenvolvimento de Sistemas - 5º período - 2024
             </div>
             <div class="comments-section">
                 <h4>User comments</h4>
