--- a/index.html
+++ b/index.html
@@ -12,16 +12,22 @@
         <form id="loginForm">
             <label for="email">E-mail Address:</label>
             <input type="email" id="email" required>
-
             <label for="password">Password:</label>
             <input type="password" id="password" required>
-
-            <button type="submit">Submit</button>
+            <button type="submit" class="submit-button">
+                Submit
+                <div class="hoverEffect">
+                    <div></div>
+                </div>
+            </button>
             <p id="errorMessage" class="error-message"></p>
         </form>
-        <p>Do you have an account? <a href="register.html">Login here!</a></p>
+        <p>Do you have an account? <a href="register.html">Register here!</a></p>
     </div>
 
+    <button id="sign-out-btn" style="display:none;">Sign Out</button>
+
     <script src="login.js"></script>
+    <script src="todolist.js"></script>
 </body>
 </html>
