alteração de cores de fundo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <label for="password">Password:</label>
             <input type="password" id="password" required>
             <button type="submit" class="submit-button">
-                Submit
+                Login
                 <div class="hoverEffect">
                     <div></div>
                 </div>
