--- a/todolist.html
+++ b/todolist.html
@@ -12,6 +12,11 @@
             <iframe src="https://open.spotify.com/embed/playlist/6zCID88oNjNv9zx6puDHKj?utm_source=generator" 
                     width="350" height="100" frameborder="0" allow="encrypted-media"></iframe>
             <h2 class="header-title">Here are your tasks!</h2>
+            <div class="calendar">
+                <div id="dayOfWeek"></div>
+                <div id="date"></div>
+                <div id="time"></div>
+            </div>
             <button id="logout">Sign Out</button>
         </div>
     </header>
