--- a/register.html
+++ b/register.html
@@ -14,7 +14,12 @@
             <input type="email" id="newEmail" required>
             <label for="newPassword">Password:</label>
             <input type="password" id="newPassword" required>
-            <button type="submit">Submit</button>
+            <button type="register" class="register-button">
+                Register
+                <div class="hoverEffect">
+                    <div></div>
+                </div>
+            </button>
             <p id="registerMessage" class="error-message"></p>
         </form>
         <p>Do you have an account? <a href="index.html">Login here!</a></p>
