Logout CSS e Remoção calendário

--- a/todolist.html
+++ b/todolist.html
@@ -17,7 +17,12 @@
                 <div id="date"></div>
                 <div id="time"></div>
             </div>
-            <button id="logout">Sign Out</button>
+            <button type="logout" class="logout-button">
+                Logout
+                <div class="hoverEffect">
+                    <div></div>
+                </div>
+            </button>
         </div>
     </header>
 
