--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p>Do you have an account? <a href="register.html">Register here!</a></p>
     </div>
 
-    <button id="sign-out-btn" style="display:none;">Sign Out</button>
+    <button id="logout" style="display:none;">Logout</button>
 
     <script src="login.js"></script>
     <script src="todolist.js"></script>
