--- a/todolist.html
+++ b/todolist.html
@@ -17,12 +17,12 @@
                 <div id="date"></div>
                 <div id="time"></div>
             </div>
-            <button type="logout" class="logout-button">
+            <button id="logout" class="logout-button">
                 Logout
                 <div class="hoverEffect">
                     <div></div>
                 </div>
-            </button>
+            </button>            
         </div>
     </header>
 
