--- a/html/register.html
+++ b/html/register.html
@@ -10,6 +10,8 @@
     <div class="login-container">
       <h2>Register now</h2>
       <form id="registerForm">
+        <label for="newName">Name:</label>
+        <input type="text" id="newName" required />
         <label for="newEmail">E-mail Adress:</label>
         <input type="email" id="newEmail" required />
         <label for="newPassword">Password:</label>
