brincando com bootstrap

--- a/html/register.html
+++ b/html/register.html
@@ -24,9 +24,9 @@
         </button>
         <p id="registerMessage" class="error-message"></p>
       </form>
-      <p>Do you have an account? <a href="index.html">Login here!</a></p>
+      <p>Do you have an account? <a href="../html/index.html">Login here!</a></p>
     </div>
 
-    <script src="../javascript/register.js"></script>
+    <script src="../javascript/../javascript/register.js"></script>
   </body>
 </html>
