--- a/html/index.html
+++ b/html/index.html
@@ -4,28 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login - To-Do List</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
-    <div class="login-container">
-      <h2>Login</h2>
-      <form id="loginForm">
-        <label for="email">E-mail Address:</label>
-        <input type="email" id="email" required />
-        <label for="password">Password:</label>
-        <input type="password" id="password" required />
-        <button type="submit" class="submit-button">
+    <div class="container login-container mt-5">
+      <h2 class="text-center">Login</h2>
+      <form id="loginForm" class="p-3">
+        <div class="form-group">
+          <label for="email">E-mail Address:</label>
+          <input type="email" id="email" class="form-control" required />
+        </div>
+        <div class="form-group">
+          <label for="password">Password:</label>
+          <input type="password" id="password" class="form-control" required />
+        </div>
+        <button type="submit" class="btn btn-primary btn-block submit-button">
           Login
           <div class="hoverEffect">
             <div></div>
           </div>
         </button>
-        <p id="errorMessage" class="error-message"></p>
+        <p id="errorMessage" class="text-danger text-center mt-2 error-message"></p>
       </form>
-      <p>Do you have an account? <a href="register.html">Register here!</a></p>
+      <p class="text-center">Do you have an account? <a href="../html/register.html">Register here!</a></p>
     </div>
 
-    <button id="logout" style="display: none">Logout</button>
+    <button id="logout" class="btn btn-secondary" style="display: none">Logout</button>
+
+    <!-- Bootstrap JS, Popper.js, and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <script src="../javascript/login.js"></script>
     <script src="../javascript/todolist.js"></script>
