título e descrição/comentários

--- a/html/todolist.html
+++ b/html/todolist.html
@@ -35,7 +35,8 @@
       <div class="list" id="to-do">
         <h2>To Do</h2>
         <div class="task-container">
-          <input type="text" id="task-input" placeholder="Tasks" />
+          <input type="text" id="task-title-input" placeholder="Task Title" />
+          <input type="text" id="task-desc-input" placeholder="Task Description" />
           <button id="add-task-btn">Add tasks</button>
           <ul id="task-list"></ul>
         </div>
@@ -71,14 +72,17 @@
         </div>
         <div class="comments-section">
           <h4>User comments</h4>
-          <ul class="comments">
-            <li>Precisa de mais funcionalidade. ⭐⭐⭐</li>
-            <li>Me ajudou muito! ⭐⭐⭐⭐</li>
-            <li>Simples e fácil de usar. ⭐⭐⭐⭐</li>
-            <li>Ótimo aplicativo! ⭐⭐⭐⭐⭐</li>
-            <li>A playlist o torna diferente! ⭐⭐⭐⭐⭐</li>
-          </ul>
-        </div>
+          <div class="comments-scroll">
+              <ul class="comments">
+                  <li>Precisa de mais funcionalidade. ⭐⭐⭐</li>
+                  <li>Me ajudou muito! ⭐⭐⭐⭐</li>
+                  <li>Simples e fácil de usar. ⭐⭐⭐⭐</li>
+                  <li>Ótimo aplicativo! ⭐⭐⭐⭐⭐</li>
+                  <li>A playlist o torna diferente! ⭐⭐⭐⭐⭐</li>
+              </ul>
+          </div>
+      </div>
+      
       </div>
     </footer>
   </body>
