--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
     <div class="login-container">
       <h2>Login</h2>
       <form id="loginForm">
-        <label for="email">E-mail Address:</label>
+        <label for="email">E-mail:</label>
         <input type="email" id="email" required />
         <label for="password">Password:</label>
         <input type="password" id="password" required />
@@ -22,7 +22,10 @@
         </button>
         <p id="errorMessage" class="error-message"></p>
       </form>
-      <p>Do you have an account? <a href="../html/register.html">Register here!</a></p>
+      <p>
+        Don't have an account?
+        <a href="../html/register.html">Register here!</a>
+      </p>
     </div>
 
     <button id="logout" style="display: none">Logout</button>
