--- a/html/todolist.html
+++ b/html/todolist.html
@@ -36,8 +36,12 @@
         <h2>To Do</h2>
         <div class="task-container">
           <input type="text" id="task-title-input" placeholder="Task Title" />
-          <input type="text" id="task-desc-input" placeholder="Task Description" />
-          <button id="add-task-btn">Add tasks</button>
+          <input
+            type="text"
+            id="task-desc-input"
+            placeholder="Task Description"
+          />
+          <button id="add-task-btn">Add task</button>
           <ul id="task-list"></ul>
         </div>
       </div>
@@ -73,16 +77,15 @@
         <div class="comments-section">
           <h4>User comments</h4>
           <div class="comments-scroll">
-              <ul class="comments">
-                  <li>Precisa de mais funcionalidade. ⭐⭐⭐</li>
-                  <li>Me ajudou muito! ⭐⭐⭐⭐</li>
-                  <li>Simples e fácil de usar. ⭐⭐⭐⭐</li>
-                  <li>Ótimo aplicativo! ⭐⭐⭐⭐⭐</li>
-                  <li>A playlist o torna diferente! ⭐⭐⭐⭐⭐</li>
-              </ul>
+            <ul class="comments">
+              <li>Precisa de mais funcionalidade. ⭐⭐⭐</li>
+              <li>Me ajudou muito! ⭐⭐⭐⭐</li>
+              <li>Simples e fácil de usar. ⭐⭐⭐⭐</li>
+              <li>Ótimo aplicativo! ⭐⭐⭐⭐⭐</li>
+              <li>A playlist o torna diferente! ⭐⭐⭐⭐⭐</li>
+            </ul>
           </div>
-      </div>
-      
+        </div>
       </div>
     </footer>
   </body>
