--- a/html/register.html
+++ b/html/register.html
@@ -12,7 +12,7 @@
       <form id="registerForm">
         <label for="newName">Name:</label>
         <input type="text" id="newName" required />
-        <label for="newEmail">E-mail Adress:</label>
+        <label for="newEmail">E-mail:</label>
         <input type="email" id="newEmail" required />
         <label for="newPassword">Password:</label>
         <input type="password" id="newPassword" required />
@@ -24,7 +24,9 @@
         </button>
         <p id="registerMessage" class="error-message"></p>
       </form>
-      <p>Do you have an account? <a href="../html/index.html">Login here!</a></p>
+      <p>
+        Do you have an account? <a href="../html/index.html">Login here!</a>
+      </p>
     </div>
 
     <script src="../javascript/../javascript/register.js"></script>
